--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/Theme.Compare_My_Trade">
         <activity
-            android:name=".ui.spalsh.LoginScreen"
-            android:label="@string/title_activity_login_screen"
-            android:theme="@style/AppTheme.NoActionBar.NoActionBar"></activity>
-        <activity android:name=".ui.spalsh.Splash">
+            android:name=".ui.home.HomeActivity"
+            android:theme="@style/Theme.Compare_My_Trade.NoActionBar"
+            android:label="@string/title_activity_home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.spalsh.LoginScreen"
+            android:label="@string/title_activity_login_screen"
+            android:theme="@style/Theme.Compare_My_Trade.NoActionBar" />
+        <activity android:name=".ui.spalsh.Splash">
+
         </activity>
     </application>
 
