--- a/build.gradle
+++ b/build.gradle
@@ -54,4 +54,6 @@ ext {
     appache_common='1.3.2'
     lifecycle_version = "2.4.0-alpha02"
     recycler_view_version = '1.2.1'
+    bubbletabbar = '1.0.8'
+    dAndDRecyclerView = '1.1.0'
 }
